fix: Fix thread safety and reliability in app-process management
* Use ConcurrentHashMap and volatile for thread-safe state management.
* Simplify binder acquisition and ensure resource cleanup on failure.
* Refactor process startup to use a timeout-based result queue.
* Ensure watchdog and stream transfer threads are marked as daemons.
* Handle stale binders in the child process cache.
* Map process exitValue errors to IllegalThreadStateException.